--- a/Either.xcodeproj/xcshareddata/xcschemes/Either_watchOS.xcscheme
+++ b/Either.xcodeproj/xcshareddata/xcschemes/Either_watchOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "9999"
+   LastUpgradeVersion = "1000"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Either::Either"
+               BlueprintIdentifier = "2A17F3B7D66618DE3A50E5DF7EBFCCF6"
                BuildableName = "Either.framework"
-               BlueprintName = "Either"
+               BlueprintName = "Either_watchOS"
                ReferencedContainer = "container:Either.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,13 +32,24 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Either::EitherTests"
+               BlueprintIdentifier = "789ACCD54FFAAB7AF645A603DB151C43"
                BuildableName = "EitherTests.xctest"
-               BlueprintName = "EitherTests"
+               BlueprintName = "EitherTests_watchOS"
                ReferencedContainer = "container:Either.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "2A17F3B7D66618DE3A50E5DF7EBFCCF6"
+            BuildableName = "Either.framework"
+            BlueprintName = "Either_watchOS"
+            ReferencedContainer = "container:Either.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
+      <CommandLineArguments>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -55,12 +66,14 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Either::Either"
+            BlueprintIdentifier = "2A17F3B7D66618DE3A50E5DF7EBFCCF6"
             BuildableName = "Either.framework"
-            BlueprintName = "Either"
+            BlueprintName = "Either_watchOS"
             ReferencedContainer = "container:Either.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <CommandLineArguments>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -70,6 +83,18 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "2A17F3B7D66618DE3A50E5DF7EBFCCF6"
+            BuildableName = "Either.framework"
+            BlueprintName = "Either_watchOS"
+            ReferencedContainer = "container:Either.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <CommandLineArguments>
+      </CommandLineArguments>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
